--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -10,12 +10,12 @@
 <body>
     <form action="/changepassword" method="POST">
         <div>
-            <h1>CHANGE YOUR PASSWORD</h1>
-            Old password: <input type="text" name="oldpassword"></input>
+            <h1>THAY ĐỔI MẬT KHẨU CỦA BẠN</h1>
+            Mật khẩu cũ: <input type="text" name="oldpassword"></input>
             </br>
-            New password: <input type="text" name="newpassword"></input>
+            Mật khẩu mới: <input type="text" name="newpassword"></input>
             </br>
-            <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Change</button>
+            <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Thay đổi</button>
         </div>
     </form>
 </body>
