--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -19,7 +19,7 @@
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">EMAIL</h5>
-                        <p class="card-text">Contact with us via Email</p>
+                        <p class="card-text">Thư điện tử</p>
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">PHONE</h5>
-                        <p class="card-text">Phone num: (+84) 0862263986</p>
+                        <p class="card-text">Điện thoại: (+84) 0862263986</p>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
 
                     <div class="card-body">
                         <h5 class="card-title">FACEBOOK</h5>
-                        <p class="card-text">Contact with us via Facebook</p>
+                        <p class="card-text">Liên hệ qua Facebook</p>
                     </div>
                 </div>
             </div>
@@ -53,12 +53,12 @@
             <div class="col-sm-3">
                 <div class="card">
                     <a href="https://www.facebook.com/LeagueStore77">
-                        <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
+                        <img class="hover-shadow cursor" src="/icon/zalo.png" style="border-radius: 10px;" alt="Card image cap">
                     </a>
 
                     <div class="card-body">
-                        <h5 class="card-title">INSTAGRAM</h5>
-                        <p class="card-text">Contact with us via Instagram</p>
+                        <h5 class="card-title">ZALO</h5>
+                        <p class="card-text">Liên hệ qua Zalo</p>
                     </div>
                 </div>
             </div>
