--- a/views/guide-policy/guide-backitem.ejs
+++ b/views/guide-policy/guide-backitem.ejs
@@ -71,6 +71,23 @@
           • Sản phẩm không giống mô tả hoặc không giống hình.<br>
 
           <strong>Trường hợp <strong>KHÔNG</strong> được giải quyết:</strong><br>
+          • Giặt tẩy sản phẩm không đúng theo quy cách. <br>
+
+          • Sản phẩm bị ảnh hưởng bởi tác dụng của hoá chất ảnh hưởng đến màu sắc, form dáng, hình dạng. <br>
+
+          • Sản phẩm bị rách, trầy xước, bị biến dạng do tiếp xúc với nhiệt độ cao hoặc bị ẩm ướt lâu ngày và liên tục, bị tác động bởi vật cứng, sắc nhọn, hoặc sản phẩm bị thú vật cắn. <br>
+
+          • Sản phẩm bị tác động bởi tai nạn, thiên tai,…<br>
+
+  <strong>3/ CHI PHÍ ĐỔI HÀNG: </strong><br>
+
+          • Miễn phí đổi hàng cho khách mua sắm tại LEAGUE STORE trong trường hợp bị lỗi do nhà sản xuất, giao nhầm hàng, hư hỏng trong quá trình vận chuyển. <br>
+
+          • Trong trường hợp khác, như không vừa size, không thích màu, mẫu,…khách hàng sẽ chịu chi phí vận chuyển chỉ với 30.000VNĐ, và Shop sẽ giao lại hàng miễn phí cho Khách hàng. <br>
+  
+                              *** Trong mọi trường hợp, quyết định của Shop là quyết định cuối cùng. <br>
+                              Xin chân thành cảm ơn và hân hạnh được phục vụ Quý Khách!” <br>
+  
       </p>
   </div>
     <footer>
