--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,10 @@
         img.hover-shadow {
             transition: 0.3s;
         }
+
+        .card-img-top.img-responsive.hover-shadow {
+            transition: 0.3s;
+        }
         
         .hover-shadow:hover {
             box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
@@ -509,8 +513,6 @@
                     </ul>
                 </li>
     
-                <li><a class="contact" href="/contact">GIỚI THIỆU</a></li>
-    
                 <li><a class="news" href="/news">NEWS</a></li>
     
                 <% if(user !== undefined && user !== "Login") {%>
@@ -527,27 +529,11 @@
                         </ul>
                     </li>   
                 <%}%>
-                <li>
-                    <a href="/signup"><span >ĐĂNG KÝ</span></a>
-                </li>
             </ul>
             
         </div>
         <ul class="nav navbar-nav navbar-right" style="position: absolute; top:  0; right: 20px;">
             <% if(user !== undefined && user !== "Login") { %>
-               <!--  <li class="dropdown">
-                    <a style="color: black;">
-                        <span class="glyphicon glyphicon-user"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <a style="color: black;">
-                            <%= user %>
-                        </a>
-                        <li>
-                            <a href="/home"><span class="glyphicon glyphicon-log-in" style="color: black;"></span> Logout </a>
-                        </li>
-                    </ul>
-                </li> -->
                 <li class="dropdown">
                     <a type="button" href="#" class="btn btn-link">
                         <%= user %>
@@ -585,13 +571,15 @@
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
-                        <h3 style="text-align: center;"> TÌM KIẾM </h3>
+                        <h3 style="text-align: center;"> MENU </h3>
+                        <a href="/contact" style="text-align: left;">Giới thiệu</a>
+                        <a href="/signup" style="text-align: left;">Đăng ký</a>
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="margin-left: 10px;">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-top: 5px; margin-left: 10px;"> Tìm kiếm </button>
                     </form>
                 </div>
                 <li>
-                    <a><span class="glyphicon glyphicon-search" style="color: black;" onclick="openNav()"></span></a>
+                    <a><span class="glyphicon glyphicon-heart-empty" style="color: black;" onclick="openNav()"></span></a>
                 </li>
             </li>
         </ul>
