--- a/views/news.ejs
+++ b/views/news.ejs
@@ -301,7 +301,7 @@
       </div>
     </div>
     <h3>TẤT CẢ BÀI VIẾT</h3>
-
+    <p>Hiện tại chưa có bài viết nào!</p>
     <footer>
         <%- include('footer'); %>
     </footer>
