--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-        <h3><a href="/">HOME/</a>QUẢN LÝ ĐƠN HÀNG</h3>
+        <h3><a href="/">TRANG CHỦ/</a>QUẢN LÝ ĐƠN HÀNG</h3>
         <div class="container">
             <!-- orders table -->
             
