--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -19,7 +19,7 @@
 
 <body>
     <div class="container">
-        <h1>Upload images</h1>
+        <h1>Tải lên hình ảnh</h1>
         <form action="/upload" method="POST" enctype="multipart/form-data" id="upload_form" style="align-items: center;">
             <!--hidden form to upload data-->
             <label for="folder">Select folder</label>
