--- a/views/uploadbanner.ejs
+++ b/views/uploadbanner.ejs
@@ -17,12 +17,12 @@
 
 <body>
     <div class="container">
-        <h1>Upload banner images</h1>
+        <h1>Tải lên ảnh banner</h1>
         <form action="/uploadbanner" method="POST" enctype="multipart/form-data" id="upload_form">
             <!--hidden form to upload data-->
-            <label for="folder">Select folder</label>
+            <label for="folder">Chọn thư mục</label>
             <input type='file' multiple='multiple' accept='image/*' name='bn' id='file' />
-            <h2>Selected Files</h2>
+            <h2>Files đã chọn</h2>
             <ul>
             </ul>
             <input type="submit" class="btn btn-primary" value="Upload banner"></input>
