--- a/views/notfound404.ejs
+++ b/views/notfound404.ejs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <a href="home" class="btn btn-outline-danger">Click here to back HOME page</a>
+    <a href="/" class="btn btn-outline-danger">Click vào đây để trở về trang chủ</a>
 </body>
 
 </html>
