--- a/views/uploaddbnotify.ejs
+++ b/views/uploaddbnotify.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <a href="/" class="btn btn-primary">Update successfully, click here to back to home page</a>
+    <a href="/" class="btn btn-primary">Tải lên thành công, bấm vào đây để trở về trang chủ</a>
 </body>
 
 </html>
