--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -22,9 +22,9 @@
         <h1>Tải lên hình ảnh</h1>
         <form action="/upload" method="POST" enctype="multipart/form-data" id="upload_form" style="align-items: center;">
             <!--hidden form to upload data-->
-            <label for="folder">Select folder</label>
+            <label for="folder">Chọn thư mục</label>
             <input type='file' class="btn btn-primary" multiple='multiple' accept='image/*' name='uppic' id='file' />
-            <h2>Selected Files</h2>
+            <h2>Files đã chọn</h2>
             <ul>
             </ul>
             <input type="submit" class="btn btn-primary btn-lg" value="Upload"></input>
