--- a/views/header.ejs
+++ b/views/header.ejs
@@ -235,7 +235,7 @@
 
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CHÍNH SÁCH - HƯỚNG DẪN<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" >HƯỚNG DẪN CHỌN SIZE</a></li>
+                        <li><a href="/guide-choosesize" >HƯỚNG DẪN CHỌN SIZE</a></li>
                         <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
                         <li><a href="/guide-backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
                         <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
