--- a/views/home.ejs
+++ b/views/home.ejs
@@ -507,9 +507,9 @@
 
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CHÍNH SÁCH - HƯỚNG DẪN<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" >HƯỚNG DẪN CHỌN SIZE</a></li>
+                        <li><a href="/guide-choosesize" >HƯỚNG DẪN CHỌN SIZE</a></li>
                         <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
-                        <li><a href="/guide.backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
+                        <li><a href="/guide-backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
                         <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
                     </ul>
                 </li>
@@ -768,6 +768,23 @@
             return ((index % 3) ? next : (next + ',')) + prev
         });
     }
+
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "220px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+
+    function responsiveMenu() {
+        var x = document.getElementById("topMenu");
+        if (x.className === "navbar navbar-dark bg-dark") {
+            x.className += " responsive";
+        } else {
+            x.className = "navbar navbar-dark bg-dark";
+        }
+    } 
 </script>
 
 </html>
