--- a/views/header.ejs
+++ b/views/header.ejs
@@ -130,7 +130,6 @@
             color: coral;
             text-decoration: underline;
         }
-
         .navbar.navbar-dark.bg-dark a.icon{
             display: none;
         }
@@ -236,9 +235,9 @@
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CHÍNH SÁCH - HƯỚNG DẪN<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/guide-choosesize" >HƯỚNG DẪN CHỌN SIZE</a></li>
-                        <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
+                        <li><a href="/guide-order" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
                         <li><a href="/guide-backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
-                        <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
+                        <li><a href="/guide-bankaccount" >TÀI KHOẢN NGÂN HÀNG</a></li>
                     </ul>
                 </li>
     
