--- a/views/guide-policy/guide-choosesize.ejs
+++ b/views/guide-policy/guide-choosesize.ejs
@@ -27,7 +27,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
+        width: 75%;
       }
       h1{
         text-align: center;
@@ -47,6 +47,12 @@
               </div>
           </div>
       </div>
+    </div>
+    <div class="container" style="font-size: 20px;">
+      <p>
+        <strong>Để biết sản phẩm quý khách lựa chọn có phù hợp với mình không?</strong> <br>
+        <strong>Quý khách vui lòng tham khảo qua bảng hướng dẫn chọn size theo từng nhóm sản phẩm dưới đây!</strong>
+      </p>
     </div>
     <h1>BẢNG HƯỚNG DẪN CHỌN SIZE</h1>
     <img src="/size_guide/guide.jpg" class="center"/>
