update function controller

--- a/views/producttable.ejs
+++ b/views/producttable.ejs
@@ -117,7 +117,7 @@
     </div>
 
     <div class="container">
-        <form method="post" name="hidden-form-delete" id="delete-form">
+        <form method="POST" name="hidden-form-delete" id="delete-form">
         </form>
     </div>
 
