--- a/views/index.ejs
+++ b/views/index.ejs
@@ -535,13 +535,13 @@
     </div>
     <br>
     <div class="button-showmore">
-        <a href="/newarrivals" class="moreproduct button">
+        <a href="/moreproducts" class="moreproduct button">
             Xem thêm
         </a>
     </div>
     <br>
     <h2 class="populate_product">
-        <a href="/newarrivals"> SẢN PHẨM BÁN CHẠY </a>
+        <a href="/moreproducts"> SẢN PHẨM BÁN CHẠY </a>
     </h2>
     <div class="grid-container">
         <% if(product) {%>
@@ -579,7 +579,7 @@
     </div>
     <br>
     <div class="button-showmore">
-        <a href="/newarrivals" class="moreproduct button">
+        <a href="/moreproducts" class="moreproduct button">
             Xem thêm
         </a>
     </div>
